[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hydr"
version = "0.0.1"
description = "A set of scripts for preforming a hydrophone analysis."
license = "Apache-2.0"
readme = "README.md"

repository = "https://github.com/MaxGunton/hydr"
# homepage = "https://maxgunton.github.io/hydr/"
# documentation = "https://maxgunton.github.io/hydrophone/"

authors = [
    "Max Gunton <maxgunton@hotmail.com>",
]
maintainers = [
    "Max Gunton <maxgunton@hotmail.com>",
]

keywords = ["analysis", "hydrophone"]
packages = [
    {include = "hydr"},
]

[tool.poetry.dependencies]
blinker = "1.5"
matplotlib = "3.5.3"
nnAudio = "0.3.1"
numpy = "1.21.6"
pandas = "1.3.5"
Pillow = "9.3.0"
PyAudio = "0.2.13"
PySide6 = "6.4.2"
python = ">=3.6,<3.11"
scipy = "1.7.3"
seaborn = "0.13.0"
Shapely = "1.8.5.post1"
simplekml = "1.3.6"
soundfile = "0.11.0"
torch = ">=1.13.0"
torchaudio = ">=0.13.0"
torchvision = ">=0.13.0"
tqdm = "4.64.1"
utm = "0.7.0"

[tool.poetry.scripts]
# CREATION
hydr-new-project = "hydr.cli:new_project_cli"
hydr-new-depfile = "hydr.cli:new_depfile_cli"

# ADD DATA
hydr-set-region = "hydr.cli:set_region_cli"
hydr-set-org = "hydr.cli:set_organization_cli"
hydr-set-bounds = "hydr.cli:set_bounds_cli"
hydr-set-coords = "hydr.cli:set_coords_cli"

# CLASSIFICATION
hydr-classify-blasts = "hydr.cli:blast_224x224_6cat_cli"

# VALIDATION
hydr-run-validator = "hydr.cli:validator_cli"

# EXPORT SCRIPTS DATA
hydr-export-summaries = "hydr.cli:export_summaries_cli"
hydr-export-wavdetails = "hydr.cli:export_wav_details_cli"
hydr-export-map = "hydr.cli:export_map_cli"
hydr-export-classifications = "hydr.cli:export_classifications_cli"
hydr-export-validations = "hydr.cli:export_validations_cli"


# CSV UTILITIES
hydr-combine-csvs = "hydr.cli:combine_csvs_cli"
hydr-fullpaths-csvs = "hydr.cli:file_column_fullpaths_cli"
hydr-basenames-csvs = "hydr.cli:file_column_basenames_cli"

# MAPPING
# TODO: Add the multilateration stuff in here

# PLOTS
hydr-plot-hour = "hydr.cli:hour_plot_cli"
hydr-plot-weekday = "hydr.cli:weekday_plot_cli"
hydr-plot-date = "hydr.cli:date_plot_cli"
hydr-plot-week = "hydr.cli:week_plot_cli"
